Fix overlap of search panel with feature search

--- a/erdblick_app/styles.scss
+++ b/erdblick_app/styles.scss
@@ -4,7 +4,7 @@
 .source-layer-dropdown {
     .p-dropdown-label {
         padding: 0.4em;
-        min-width: 13em;
+        min-width: 8em;
     }
 }
 
@@ -272,6 +272,7 @@ body {
     min-height: 3.5em;
     max-width: calc(100vw - 5em);
     max-height: calc(100vh - 5em);
+    z-index: 150;
 
     .resizable-container {
         min-width: 22em;
@@ -302,7 +303,6 @@ body {
 
     .search-input {
         width: 100%;
-        z-index: 150;
         position: relative;
         line-height: 0;
 
@@ -750,6 +750,13 @@ body {
     .p-overlaypanel-content {
         padding: 0.75em;
     }
+}
+
+.z-index-low {
+    position: absolute;
+    top: 4em;
+    left: 0.5em;
+    z-index: 149 !important;
 }
 
 .feature-search-controls {
